Revert "Fixed restart method"
This reverts commit 9c245794adf3f9afbcda02c331355fdffaea9dd1.